# simon_moveit_config

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: fake_controllers.yaml  gazebo_simon.urdf  inertial_macros.xacro  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simon.srdf  simon.urdf.xacro  simple_moveit_controllers.yaml  stomp_planning.yaml
launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  rviz.launch  sensor_manager.launch.xml  setup_assistant.launch  simon.rviz  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
