<?xml version="1.0"?>
<package format="2">
  <name>simon_moveit_config</name>
  <version>0.0.0</version>
  <description>The simon_moveit_config package</description>


  <maintainer email="jperales@hotmail.com">Jose Perales</maintainer>

  <license></license>




  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
